# nllb-serve

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-build-test.yml
docs/: release-pipi.md  release-pypi.md
nllb_serve/: MANIFEST.in  __init__.py  __main__.py  app.py  nllb_batch.py  utils.py
nllb_serve/static/: docs.html
nllb_serve/static/js/: highlight.pack.js
nllb_serve/templates/: about.html  base.html  home.html  index.html
